--- a/src/components/fb/FidelityBondSteps.module.css
+++ b/src/components/fb/FidelityBondSteps.module.css
@@ -153,6 +153,10 @@
   height: 18px;
 }
 
+.confirmationStepIcon svg {
+  color: var(--bs-body-color);
+}
+
 .confirmationStepLabel {
   color: var(--bs-gray-600);
   font-size: 0.8rem;
